fixed wallpaper on mobile

--- a/style.css
+++ b/style.css
@@ -14,7 +14,10 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-attachment: fixed;
+    background-position: center;
     margin: 0;
+    width: 100%;
 }
 
 .Top {
